--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,6 +1,6 @@
 <table border="1" cellpadding="40">
 	<tr>
-		<td data-x="0" data-y="0"></td>
+		<td data-x="0" data-y="0">Test</td>
 		<td data-x="1" data-y="0"></td>
 		<td data-x="2" data-y="0"></td>
 	</tr>
