--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,18 +1,18 @@
 <table border="1" cellpadding="40">
 	<tr>
-		<td data-x="0" data-y="0">Test</td>
-		<td data-x="1" data-y="0"></td>
-		<td data-x="2" data-y="0"></td>
+		<td data-x="0" data-y="0">0</td>
+		<td data-x="1" data-y="0">1</td>
+		<td data-x="2" data-y="0">2</td>
 	</tr>
 	<tr>
-		<td data-x="0" data-y="1"></td>
-		<td data-x="1" data-y="1"></td>
-		<td data-x="2" data-y="1"></td>
+		<td data-x="0" data-y="1">3</td>
+		<td data-x="1" data-y="1">4</td>
+		<td data-x="2" data-y="1">5</td>
 	</tr>
 	<tr>
-		<td data-x="0" data-y="2"></td>
-		<td data-x="1" data-y="2"></td>
-		<td data-x="2" data-y="2"></td>
+		<td data-x="0" data-y="2">6</td>
+		<td data-x="1" data-y="2">7</td>
+		<td data-x="2" data-y="2">8</td>
 	</tr>
 </table>
 
