--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -2,17 +2,17 @@
 	<tr>
 		<td data-x="0" data-y="0"> </td>
 		<td data-x="1" data-y="0"> </td>
-		<td data-x="2" data-y="0">Y</td>
+		<td data-x="2" data-y="0"> </td>
 	</tr>
 	<tr>
 		<td data-x="0" data-y="1"> </td>
-		<td data-x="1" data-y="1">X</td>
-		<td data-x="2" data-y="1">Y</td>
+		<td data-x="1" data-y="1"> </td>
+		<td data-x="2" data-y="1"> </td>
 	</tr>
 	<tr>
 		<td data-x="0" data-y="2"> </td>
-		<td data-x="1" data-y="2">Y</td>
-		<td data-x="2" data-y="2">Y</td>
+		<td data-x="1" data-y="2"> </td>
+		<td data-x="2" data-y="2"> </td>
 	</tr>
 </table>
 
